[tool.poetry]
name = "milvus-reproducibility-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pymilvus = "2.3.6"
setuptools = "^69.1.1"
more-itertools = "^10.2.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
